texture_test_output.txt
  File "<string>", line 1
    import os, json; from PIL import Image, ImageEnhance; import numpy as np; print('--- STARTING TEXTURE VERIFICATION SCRIPT ---'); manifest_path = os.path.join('assets', 'textures', 'manifest.json'); print(f'Looking for manifest at: {os.path.abspath(manifest_path)}'); f = open(manifest_path, 'r'); manifest = json.load(f); f.close(); texture = 'rough_grey_pulp'; texture_path = None; for cat, data in manifest.get('categories', {}).items(): [ (texture_path := os.path.join('assets', 'textures', tex['path'])) for tex in data.get('textures', []) if os.path.splitext(tex['filename'])[0] == texture ]; print(f'Resolved Texture Path: {texture_path}'); if not os.path.exists(texture_path): print('ERROR: Texture file not found at path'); exit(1); canvas = Image.new('RGB', (400, 400), color=(150, 150, 200)); canvas.save('test_input.png'); base_image = Image.open('test_input.png').convert('RGB'); texture_img = Image.open(texture_path).resize(base_image.size).convert('RGB'); base_norm = np.array(base_image).astype(float) / 255.0; texture_norm = np.array(texture_img).astype(float) / 255.0; textured = np.clip((base_norm * 0.7 + texture_norm * 0.3) * 1.1, 0, 1); textured_image = Image.fromarray((textured * 255).astype(np.uint8)); ImageEnhance.Contrast(textured_image).enhance(1.1).save('test_output_textured.png'); print('SUCCESS: test_output_textured.png has been created with texture applied.')
                                                                                                                                                                                                                                                                                                                                                                                                   ^^^
SyntaxError: invalid syntax
